--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ select, input{
 button {
     background-color: #772FD3;
     color: white;
-    width: 327px;
+    width: 100%;
     height: 48px;
     border-radius: 5px;
     font-size: 18px;
@@ -77,6 +77,7 @@ section {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: white;
 }
 
 .currency-box {
@@ -109,6 +110,11 @@ section {
     }
 
     main {
-        margin: 50px auto;
+        width: 100%;
+        
+    }
+    
+    body {
+        background: #f4f4f4;
     }
 }
