--- a/style.css
+++ b/style.css
@@ -9,14 +9,14 @@
 }
 
 body {
-    background-color: #8a51fc;
+    background-color: #414141;
 }
 
 .logo {
     width: 300px;
     height: 300px;
     display: block;
-    margin: 20px auto;
+    margin: 0 auto 20px;
 }
 
 main {
@@ -51,7 +51,7 @@ select, input{
 }
 
 button {
-    background-color: #772FD3;
+    background-color: #414141;
     color: white;
     width: 100%;
     height: 48px;
@@ -89,6 +89,7 @@ section {
 
 .arrow-img {
     margin: 15px 0;
+    width: 90px;
 }
 
 .currency {
